# mina

./: .gitignore  binarize.py  optimize.py  pyproject.toml  train.py
mina/: acoustic.py  boundary.py  dataset.py  model.py  positional_encoding.py
model/: acoustic.py  boundary.py  positional_encoding.py  transformer.py
